[package]
name = "bitvec_simd"
description = "bitvec implemented with wide"
authors = ["GCCFeli"]
version = "0.19.0"
edition = "2021"
homepage = "https://github.com/gccfeli/bitvec_simd"
license = "MIT"
readme = "README.md"
repository = "https://github.com/gccfeli/bitvec_simd"
keywords = ["bitvector"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
use_serde = ["serde"]
std = []

[dependencies]
wide = "0.7"
smallvec = { version = "1.8", features = [ "const_generics", "serde" ] }
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
criterion = "0.3"
bit-vec = "0.6"
bitvec = "1.0"
serde_test = "1.0"

[[bench]]
name = "comparison"
harness = false
