[package]
name = "bitvec_simd"
version = "0.20.3"
authors = ["GCCFeli <feli@gccfeli.cn>"]
edition = "2021"
description = "bitvec with SIMD"
documentation = "https://docs.rs/bitvec_simd"
readme = "README.md"
homepage = "https://github.com/gccfeli/bitvec_simd"
repository = "https://github.com/gccfeli/bitvec_simd"
license = "MIT"
keywords = ["bitvector", "bitvec", "bitmap", "simd", "bit"]
categories = ["data-structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
use_serde = ["serde"]
std = []

[dependencies]
wide = "0.7"
smallvec = { version = "1.8", features = [ "const_generics", "serde" ] }
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
criterion = "0.3"
bit-vec = "0.6"
bitvec = "1.0"
serde_test = "1.0"

[[bench]]
name = "comparison"
harness = false
